ADMINUI-1217 ui bug: platform selector box clipped by container element

--- a/less/app.less
+++ b/less/app.less
@@ -496,11 +496,10 @@ h1.branding {
   .change-rack-id { float: right; }
   .change-rack-form,
   .change-platform-form {
-    background: #f3f3f3;
     input, select { margin: 0; padding: 3px; }
     button { margin: 0; padding: 3px 8px; }
     line-height: 1em; font-size: 10px;
-    select { width: 220px;}
+    select { width: 250px;}
   }
 
   .change-reserve { .pull-right; }
@@ -566,10 +565,10 @@ h1.branding {
   }
 
   .platform {
-    overflow: hidden;
     .item-content { width: 194px; text-align: right;}
     .change { padding: 8px;}
   }
+
   .serial-console {
     overflow: hidden;
     margin-top: 10px;
